<resources>
    <string name="app_name">ITE Online Shop</string>
    <string name="Home">Home</string>
    <string name="Products">Products</string>
    <string name="Profile">Profile</string>
    <string name="More">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email </string>
    <string name="FullName">Full Name </string>
    <string name="PhoneNumber">Phone Number </string>
    <string name="Gender">Gender </string>
    <string name="Birthday">Birthday </string>
    <string name="Address">Address </string>
    <string name="Search">Search </string>
    <string name="EditProfile">Edit Profile </string>

</resources>