<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/rounded"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:src="@drawable/ic_profile"
                android:id="@+id/profileImage"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:id="@+id/fullName"
                    android:text="@string/FullName"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/email"
                    android:text="@string/Email"/>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>


            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/edit"
                android:paddingEnd="5dp"
                android:src="@drawable/ic_edit"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/rounded"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/Email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:id="@+id/emailShow"
                android:text="@string/Email" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/rounded"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/PhoneNumber" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:id="@+id/phone"
                android:text="@string/PhoneNumber" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/rounded"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/Gender" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:id="@+id/gender"
                android:text="@string/Gender" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/rounded"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/Birthday" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:id="@+id/bod"
                android:text="@string/Birthday" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/rounded"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Address"
                android:textSize="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:id="@+id/address"
                />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>